r677: * Added the xml.png icon * Added the "Save as XML" so that we can export the directory information in XML format * Changed the CSS to align correctly

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -91,5 +91,5 @@ td {
 /* Images */
 .export_img {
   border: 0;
-	vertical-align: bottom;
+	vertical-align: middle;
 }
